batler/jenkins/templates/deployment.yaml


apiVersion: apps/v1
kind: Deployment
metadata:
  name: batler-jenkins
  namespace: "default"
  labels:
    app.kubernetes.io/instance: batler
    app.kubernetes.io/name: jenkins
    app.kubernetes.io/version: 2.462.1
    helm.sh/chart: jenkins-13.4.19
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: batler
      app.kubernetes.io/name: jenkins
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: batler
        app.kubernetes.io/name: jenkins
        app.kubernetes.io/version: 2.462.1
        helm.sh/chart: jenkins-13.4.19
        app.kubernetes.io/component: jenkins-controller
      annotations:
        checksum/secrets: 057bb9d42b553e8c1ce90c399d6f3b27952740c9d67226c4ab1d92d676e84710
    spec:
      serviceAccountName: batler-jenkins
      
      automountServiceAccountToken: true
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: batler
                    app.kubernetes.io/name: jenkins
                    app.kubernetes.io/component: jenkins-controller
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      containers:
        - name: jenkins
          image: docker.io/bitnami/jenkins:2.462.1-debian-12-r0
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: https
              containerPort: 8443
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 180
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /login
              port: http
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
            successThreshold: 1
          resources:
            limits:
              cpu: 750m
              ephemeral-storage: 2Gi
              memory: 1536Mi
            requests:
              cpu: 500m
              ephemeral-storage: 50Mi
              memory: 1024Mi
          volumeMounts:
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/jenkins/plugins
              subPath: app-plugins-dir
            - name: empty-dir
              mountPath: /opt/bitnami/jenkins/tmp
              subPath: app-tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/jenkins/logs
              subPath: app-logs-dir
            - name: jenkins-data
              mountPath: /bitnami/jenkins
      volumes:
        - name: empty-dir
          emptyDir: {}
        - name: jenkins-data
          persistentVolumeClaim:
            claimName: batler-jenkins
