batler/jenkins/templates/controller-svc.yaml


apiVersion: v1
kind: Service
metadata:
  name: batler-jenkins
  namespace: "default"
  labels:
    app.kubernetes.io/instance: batler
    app.kubernetes.io/name: jenkins
    app.kubernetes.io/version: 2.462.1
    helm.sh/chart: jenkins-13.4.19
spec:
  type: LoadBalancer
  externalTrafficPolicy: "Cluster"
  sessionAffinity: None
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/instance: batler
    app.kubernetes.io/name: jenkins
    app.kubernetes.io/component: jenkins-controller
