batler/jenkins/templates/networkpolicy.yaml

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: batler-jenkins
  namespace: "default"
  labels:
    app.kubernetes.io/instance: batler
    app.kubernetes.io/name: jenkins
    app.kubernetes.io/version: 2.462.1
    helm.sh/chart: jenkins-13.4.19
    app.kubernetes.io/component: jenkins-controller
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: batler
      app.kubernetes.io/name: jenkins
      app.kubernetes.io/component: jenkins-controller
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 8080
        - port: 8443
